consolidate spotless-maven-plugin, formatter-maven-plugin, and impsort-maven-plugin - apply