@@ -10,8 +10,7 @@ public class LoadedParameterConverter implements ParameterConverterSupplier {
     public ParameterConverter get() {
         try {
             return (ParameterConverter) Class.forName(className, false, Thread.currentThread().getContextClassLoader())
-                    .getDeclaredConstructor()
-                    .newInstance();
+                    .getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             throw new RuntimeException(e);
         }
